--- a/Assignmen_one/index.html
+++ b/Assignmen_one/index.html
@@ -100,7 +100,7 @@
 		</div >
 	</nav>
 	<div style="background-color: #FBA808;margin-top: 20px">
-		<marquee width="100%" direction="right">Affilliated to VTU, Belgaum, Approved by AICTE, New Delhi, Recognized by Govt. of Karnataka</marquee>
+		<marquee width="100%" direction="left">Affilliated to VTU, Belgaum, Approved by AICTE, New Delhi, Recognized by Govt. of Karnataka</marquee>
 		
 	</div>
 	<div id="content">
